welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:29: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime6.MethodsDogHouse'
	override def run() {
                     ^